# hifi-opensubsonic

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  instances.json.example  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
app/: auth.py  cache.py  config.py  database.py  hifi_client.py  lastfm_client.py  limiter.py  main.py  models.py  responses.py
app/routers/: __init__.py  browsing.py  common.py  lastfm.py  media.py  search.py  stubs.py  subsonic.py  system.py  user_data.py
tests/: test_cache.py  test_hifi_client.py  verify_api.py
web-ui/: package-lock.json  package.json
web-ui/src/: App.tsx
web-ui/src/app/: AppRouter.tsx
web-ui/src/app/guards/: ProtectedRoute.tsx
web-ui/src/app/providers/: AuthProvider.tsx
web-ui/src/lib/: api.ts
web-ui/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
web-ui/src/types/: auth.ts
