[project]
name = "hifi-opensubsonic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "sqlmodel",
    "asyncpg",
    "passlib[bcrypt]",
    "bcrypt==3.2.2", # Pin for passlib compatibility
    "uvicorn>=0.40.0",
    "xmltodict>=1.0.2",
    "python-multipart",
    "pyjwt>=2.11.0",
]
