[project]
name = "hifi-opensubsonic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx[http2]>=0.28.1",
    "pydantic-settings>=2.12.0",
    "sqlmodel",
    "asyncpg",
    "uvicorn>=0.40.0",
    "xmltodict>=1.0.2",
    "python-multipart",
    "pyjwt>=2.11.0",
    "slowapi>=0.1.9",
    "cryptography>=46.0.5",
    "bcrypt>=4.0.0",
    "cachetools>=5.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
